[gd_scene load_steps=18 format=3 uid="uid://cvi2gmxvsmk82"]

[ext_resource type="PackedScene" uid="uid://4vssiq2bd7do" path="res://Reel.tscn" id="1_46mtb"]
[ext_resource type="Script" path="res://World.gd" id="1_vpq1j"]
[ext_resource type="Texture2D" uid="uid://cel7muesdfall" path="res://Assets/Crazy Clowns/Transparent_Birthday_Frame_with_ Clown.png" id="2_7lnnv"]
[ext_resource type="PackedScene" uid="uid://v00uyf0cemu3" path="res://WinningLine.tscn" id="3_ovecd"]
[ext_resource type="StyleBox" uid="uid://3kxoholg7ye" path="res://GreenButtonUnpressed.tres" id="4_qol0p"]
[ext_resource type="AudioStream" uid="uid://d0xxy1c1lmoad" path="res://Assets/Crazy Clowns/Audio/ReelSpinning.wav" id="5_n5ew2"]
[ext_resource type="AudioStream" uid="uid://b5qvxhyagxa16" path="res://Assets/Crazy Clowns/Audio/black-circus-music-32096.mp3" id="6_7olct"]
[ext_resource type="PackedScene" uid="uid://b17cgrjwjtlyx" path="res://header.tscn" id="8_c124j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dreqk"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.792157, 0.541176, 0.243137, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.878431, 0.807843, 0.403922, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qd20v"]
bg_color = Color(0.32549, 0.690196, 0.439216, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.533333, 0.901961, 0.580392, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pmid8"]
bg_color = Color(0, 0.313726, 0.133333, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.137255, 0.376471, 0.211765, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Animation" id="Animation_nnjhp"]
length = 0.001

[sub_resource type="Animation" id="Animation_po26t"]
resource_name = "Spinning"
length = 3.1
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 1.92,
"start_offset": 0.08,
"stream": ExtResource("5_n5ew2")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a43a5"]
_data = {
"RESET": SubResource("Animation_nnjhp"),
"Spinning": SubResource("Animation_po26t")
}

[sub_resource type="Animation" id="Animation_orny3"]
resource_name = "BackgroundAudio"
length = 60.79
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background Audio/BackgroundAudio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_7olct")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_lb5i5"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uq1s4"]
_data = {
"BackgroundAudio": SubResource("Animation_orny3"),
"RESET": SubResource("Animation_lb5i5")
}

[node name="GameWorld" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpq1j")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.275
anchor_right = 0.95
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="0" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_46mtb")]
layout_mode = 2

[node name="1" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_46mtb")]
layout_mode = 2

[node name="2" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_46mtb")]
layout_mode = 2

[node name="3" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_46mtb")]
layout_mode = 2

[node name="4" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_46mtb")]
layout_mode = 2

[node name="WinningLinesContainer" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="4" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-4.6, -56.2)
default_color = Color(0.541176, 0.105882, 0.513726, 1)

[node name="9" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-3.6, -37.2)
default_color = Color(0, 0.466667, 0.384314, 1)

[node name="2" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-2.6, -0.199997)
default_color = Color(0.529412, 0.419608, 0.129412, 1)

[node name="7" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-3.6, 18.8)
default_color = Color(0.172549, 0.282353, 0.654902, 1)

[node name="1" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-4.6, 66.8)
default_color = Color(0.717647, 0.376471, 0.901961, 1)

[node name="6" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-5.6, 89.8)
default_color = Color(0.843137, 0.529412, 0, 1)

[node name="3" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-6.6, 130.8)
default_color = Color(0.247059, 0.694118, 0.329412, 1)

[node name="8" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-5.6, 157.8)
default_color = Color(0.941176, 0.403922, 0.352941, 1)

[node name="5" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-13.6, 194.8)
default_color = Color(0.372549, 0.45098, 0.180392, 1)

[node name="10" parent="PanelContainer/WinningLinesContainer" instance=ExtResource("3_ovecd")]
visible = false
position = Vector2(-12.6, 223.8)
default_color = Color(0.160784, 0.513726, 0.501961, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -162.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7lnnv")
expand_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
offset_left = -0.200005
offset_right = 0.200073
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Line_Parameters_Container" type="PanelContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dreqk")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/Line_Parameters_Container"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Lines"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Decrement_Lines" type="Button" parent="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_qol0p")
theme_override_styles/hover = ExtResource("4_qol0p")
theme_override_styles/pressed = ExtResource("4_qol0p")
theme_override_styles/disabled = ExtResource("4_qol0p")
theme_override_styles/focus = ExtResource("4_qol0p")
text = "-"

[node name="Current_Lines_Label" type="Label" parent="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "10"
horizontal_alignment = 1

[node name="Increment_Lines" type="Button" parent="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_qol0p")
theme_override_styles/hover = ExtResource("4_qol0p")
theme_override_styles/pressed = ExtResource("4_qol0p")
theme_override_styles/disabled = ExtResource("4_qol0p")
theme_override_styles/focus = ExtResource("4_qol0p")
disabled = true
text = "+"

[node name="PanelContainer2" type="PanelContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dreqk")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wager Per Line"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Decrement_Wager_Button" type="Button" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_qol0p")
theme_override_styles/hover = ExtResource("4_qol0p")
theme_override_styles/pressed = ExtResource("4_qol0p")
theme_override_styles/disabled = ExtResource("4_qol0p")
theme_override_styles/focus = ExtResource("4_qol0p")
disabled = true
text = "-"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "$"

[node name="Wager Field" type="LineEdit" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "100"
alignment = 1

[node name="Increment_Wager_Button" type="Button" parent="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_qol0p")
theme_override_styles/hover = ExtResource("4_qol0p")
theme_override_styles/pressed = ExtResource("4_qol0p")
theme_override_styles/disabled = ExtResource("4_qol0p")
theme_override_styles/focus = ExtResource("4_qol0p")
text = "+"

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_qd20v")
theme_override_styles/hover = SubResource("StyleBoxFlat_pmid8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pmid8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pmid8")
theme_override_styles/focus = SubResource("StyleBoxFlat_pmid8")
text = "SPIN $1000"

[node name="Animation" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
libraries = {
"": SubResource("AnimationLibrary_a43a5")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Animation"]
volume_db = -15.326

[node name="Background Audio" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uq1s4")
}

[node name="BackgroundAudio" type="AudioStreamPlayer2D" parent="Background Audio"]
stream = ExtResource("6_7olct")
volume_db = -2.338
autoplay = true

[node name="Header" parent="." instance=ExtResource("8_c124j")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2

[connection signal="pressed" from="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer/HBoxContainer/Decrement_Lines" to="." method="_on_decrement_lines_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Line_Parameters_Container/HBoxContainer/VBoxContainer/HBoxContainer/Increment_Lines" to="." method="_on_increment_lines_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer/Decrement_Wager_Button" to="." method="_on_decrement_wager_button_pressed"]
[connection signal="text_changed" from="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Wager Field" to="." method="_on_wager_field_text_changed"]
[connection signal="pressed" from="Control/HBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer/Increment_Wager_Button" to="." method="_on_increment_wager_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button" to="." method="_spin"]
